# code-agent-sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SDLC.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: API_REFERENCE.md  README.md  autoresearch.md  configuration.md  error-handling.md  event-streaming.md  examples.md  getting-started.md  permissions.md  plan-mode.md  sdlc-workflows.md  startup-performance.md
examples/: 01-hello-agent.cpp  02-streaming-query.cpp  03-code-reviewer.cpp  04-bash-command.cpp  05-file-editor.cpp  06-prompt-skills.cpp  07-direct-skills.cpp  08-memory-management.cpp  10-multi-tool-reasoning.cpp  13-permissions.cpp  20-sdlc-discovery-plan.cpp  21-sdlc-gated-implementation.cpp  22-sdlc-release-readiness.cpp  23-system-prompts.cpp  24-high-level-agent.cpp  25-structured-json.cpp  26-runtime-error-to-pr.cpp  26-runtime-error-to-pr_advanced.cpp  27-autoresearch-ledger.cpp  basic-agent.cpp  basic-usage.cpp  example_common.hpp  loop-strategies.cpp  permission-handling.cpp  sdk-control-features.cpp  streaming.cpp
include/autohand/: sdk.hpp
src/: sdk.cpp
tests/: test_current_cli.cpp  test_sdk.cpp
